--- a/FPetSpa/appsettings.json
+++ b/FPetSpa/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "FPetDBContext": "Data Source=MSI\\MYSQL2014;Initial Catalog=FpetSpa;Persist Security Info=True;User ID=sa;Password=12345;Trust Server Certificate=True"
+    "FPetDBContext": "Data Source=LAPTOP-G5HQJSJ2\\SQLEXPRESS;Initial Catalog=FpetSpa;Persist Security Info=True;User ID=sa;Password=12345;Trust Server Certificate=True"
   },
 
   "Logging": {
