--- a/FPetSpa/appsettings.json
+++ b/FPetSpa/appsettings.json
@@ -1,7 +1,5 @@
 {
-  "ConnectionStrings": {
-    "FPetDBContext": "Data Source=MSI\\MYSQL2014;Initial Catalog=FpetSpa;Persist Security Info=True;User ID=sa;Password=12345;Trust Server Certificate=True"
-  },
+  
 
   "Logging": {
     "LogLevel": {
@@ -9,5 +7,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "FPetDBContext": "Data Source=.;Initial Catalog=FpetSpa;User Id=sa;Password=12345;TrustServerCertificate=True"
+  }
 }
