--- a/FPetSpa/appsettings.json
+++ b/FPetSpa/appsettings.json
@@ -1,9 +1,7 @@
 {
 
   "ConnectionStrings": {
-
-    "FPetDBContext": "Data Source=MSI\\SQLEXPRESS;Initial Catalog=FpetSpa;Persist Security Info=True;User ID=sa;Password=12345;Trust Server Certificate=True"
-
+    "FPetDBContext": "Data Source=MSI\\MYSQL2014;Initial Catalog=FpetSpa;Persist Security Info=True;User ID=sa;Password=12345;Trust Server Certificate=True"
   },
 
   "Logging": {
@@ -12,8 +10,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "FPetDBContext": "Data Source=.;Initial Catalog=FpetSpa;User Id=sa;Password=12345;TrustServerCertificate=True"
-  }
+  "AllowedHosts": "*"
+
 }
