--- a/FE/package.json
+++ b/FE/package.json
@@ -12,27 +12,38 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.19",
-    "@mui/x-date-pickers": "^7.6.1",
+    "@nextui-org/react": "^2.4.0",
+    "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
-    "dayjs": "^1.11.11",
+    "framer-motion": "^11.2.6",
+    "jwt-decode": "^4.0.0",
+    "next": "^14.2.3",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.23.1"
+    "react-quill": "^2.0.0",
+    "react-redux": "^8.0.1",
+    "react-router-dom": "^6.23.1",
+    "react-scripts": "^5.0.1",
+    "react-toastify": "^9.0.7",
+    "redux-persist": "^6.0.0",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.7",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-hooks": "^5.1.0-rc-38e3b23483-20240529",
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
