update logout BE

--- a/FPetSpa/appsettings.json
+++ b/FPetSpa/appsettings.json
@@ -2,7 +2,7 @@
 
 
   "ConnectionStrings": {
-    "FPetDBContext": "Data Source=.;Initial Catalog=FpetSpa;Persist Security Info=True;User ID=sa;Password=12345;Trust Server Certificate=True"
+    "FPetDBContext": "Data Source=MSI\\MYSQL2014;Initial Catalog=FpetSpa;Persist Security Info=True;User ID=sa;Password=12345;Trust Server Certificate=True"
   },
   "Logging": {
     "LogLevel": {
