Update check mail, logout, up live domain

--- a/FPetSpa/appsettings.json
+++ b/FPetSpa/appsettings.json
@@ -2,7 +2,7 @@
 
 
   "ConnectionStrings": {
-    "FPetDBContext": "Data Source=MSI\\MYSQL2014;Initial Catalog=FpetSpa;Persist Security Info=True;User ID=sa;Password=12345;Trust Server Certificate=True"
+    "FPetDBContext": "Server=tcp:fpetspadatabase.database.windows.net,1433;Initial Catalog=FpetSpa;Persist Security Info=False;User ID=hungnpse172907;Password=Hunghau589@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
@@ -16,6 +16,21 @@
     "ClientSecret": "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"
 
   },
+
+  "GmailSettings": {
+    "ClientSecretFilePath": "Secret\\client_secret_554094266789-iqc14jn9mv9rucu4gdkeuibltsko48t1.apps.googleusercontent.com.json",
+    "ApplicationName": "FPetSpa",
+    "Password": "shdl hktx axmx qzuz"
+  },
+
+  "AWS": {
+    "Profile": "default",
+    "Region": "ap-southeast-2",
+    "AccessKey": "AKIA6ODVAEM6MT7FKXNB",
+    "SecretKey": "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"
+ 
+  },
+
 
   "AllowedHosts": "*",
   "JWT": {
