--- a/FE/package.json
+++ b/FE/package.json
@@ -10,56 +10,31 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@azure/storage-blob": "^12.18.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@fortawesome/free-brands-svg-icons": "^6.5.2",
-    "@fortawesome/free-regular-svg-icons": "^6.5.2",
-    "@fortawesome/free-solid-svg-icons": "^6.5.2",
-    "@fortawesome/react-fontawesome": "^0.2.2",
-    "@fullcalendar/core": "^6.1.13",
-    "@fullcalendar/daygrid": "^6.1.13",
-    "@fullcalendar/interaction": "^6.1.13",
-    "@fullcalendar/list": "^6.1.13",
-    "@fullcalendar/react": "^6.1.13",
-    "@fullcalendar/timegrid": "^6.1.13",
-    "@mui/icons-material": "^5.15.18",
-    "@mui/material": "^5.15.18",
-    "@mui/x-data-grid": "^7.5.1",
-    "@mui/x-data-grid-pro": "^7.5.1",
-    "@mui/x-date-pickers": "^7.5.1",
-    "@nivo/bar": "^0.87.0",
-    "@nivo/geo": "^0.87.0",
-    "@nivo/line": "^0.87.0",
-    "@nivo/pie": "^0.87.0",
+    "@mui/lab": "^5.0.0-alpha.170",
+    "@mui/material": "^5.15.19",
+    "@nextui-org/react": "^2.4.0",
     "@reduxjs/toolkit": "^2.2.5",
-    "@testing-library/jest-dom": "^6.4.5",
-    "@testing-library/react": "^15.0.7",
-    "@testing-library/user-event": "^14.5.2",
-    "@tippyjs/react": "^4.2.6",
-    "antd": "^5.9.2",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
-    "jwt-decode": "^3.1.2",
-    "nprogress": "^0.2.0",
+    "framer-motion": "^11.2.6",
+    "jwt-decode": "^4.0.0",
+    "next": "^14.2.3",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
-    "react-grid-layout": "^1.4.4",
-    "react-hook-form": "^7.47.0",
+    "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
-    "react-paginate": "^8.1.3",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.0.7",
-    "redux": "^4.2.0",
-    "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.4.1",
-    "sass": "^1.53.0",
-    "swiper": "^10.3.1"
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
