--- a/BE/FPetSpa/appsettings.json
+++ b/BE/FPetSpa/appsettings.json
@@ -34,12 +34,12 @@
   "VnPay": {
     "TmnCode": "N4K09N5I",
     "HashSecret": "76GPDK5EALAUYRQ0ALQMI21V6BKKGTE1",
-    "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+    "Url": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
     "Version": "2.1.0",
     "Command": "pay",
     "CurrCode": "VND",
     "Locale": "vn",
-    "PaymentBackReturnUrl": "https://localhost:7055/api/cart/paymentcallback"
+    "PaymentBackReturnUrl": "https://localhost:7055/api/Payment/Vnpaymentcallback"
   },
 
 
