--- a/FE/package.json
+++ b/FE/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.11",
     "framer-motion": "^11.2.6",
     "jwt-decode": "^4.0.0",
     "next": "^14.2.3",
