--- a/FE/package.json
+++ b/FE/package.json
@@ -38,6 +38,7 @@
     "react-scripts": "^3.0.1",
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
+    "swiper": "^11.1.4",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
