--- a/BE/FPetSpa/appsettings.json
+++ b/BE/FPetSpa/appsettings.json
@@ -28,7 +28,18 @@
     "Region": "ap-southeast-2",
     "AccessKey": "AKIA6ODVAEM6MT7FKXNB",
     "SecretKey": "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"
- 
+
+  },
+
+  "VnPay": {
+    "TmnCode": "N4K09N5I",
+    "HashSecret": "76GPDK5EALAUYRQ0ALQMI21V6BKKGTE1",
+    "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+    "Version": "2.1.0",
+    "Command": "pay",
+    "CurrCode": "VND",
+    "Locale": "vn",
+    "PaymentBackReturnUrl": "https://localhost:7055/api/cart/paymentcallback"
   },
 
 
