--- a/FE/package.json
+++ b/FE/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@heroicons/react": "^2.1.3",
+    "@mui/icons-material": "^5.15.19",
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.19",
     "@nextui-org/react": "^2.4.0",
+    "@paypal/react-paypal-js": "^8.3.0",
+    "@react-icons/all-files": "^4.1.0",
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
@@ -26,13 +30,14 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
-    "react-quill": "^2.0.0",
+    "react-quill": "^0.0.2",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.23.1",
-    "react-scripts": "^5.0.1",
-    "react-toastify": "^9.0.7",
+    "react-scripts": "^3.0.1",
+    "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "yarn": "^1.22.22"
   },
@@ -46,7 +51,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc-38e3b23483-20240529",
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^3.4.4",
     "vite": "^5.2.0"
   }
 }
