Update ReadMe file and Check Expired Unconfirmed User

--- a/BE/FPetSpa/appsettings.json
+++ b/BE/FPetSpa/appsettings.json
@@ -2,7 +2,7 @@
 
 
   "ConnectionStrings": {
-    //  "FPetDBContext": "Data Source=LAPTOP-G5HQJSJ2\\SQLEXPRESS;Initial Catalog=FpetSpa;Persist Security Info=True;User ID=sa;Password=12345;Trust Server Certificate=True"
+    //"FPetDBContext": "Data Source=PhiHung\\MYSQL2022;Initial Catalog=FpetSpa;Persist Security Info=True;User ID=sa;Password=12345;Trust Server Certificate=True"
     "FPetDBContext": "Server=tcp:fpetspadatabase.database.windows.net,1433;Initial Catalog=FpetSpa;Persist Security Info=False;User ID=hungnpse172907;Password=Hunghau589@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
  "Logging": {
