--- a/FE/package.json
+++ b/FE/package.json
@@ -13,7 +13,6 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    
     "test": "jest --config jest.config.cjs"
   },
   "dependencies": {
@@ -37,6 +36,7 @@
     "eslint-plugin-jest": "^28.6.0",
     "framer-motion": "^11.2.6",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "next": "^14.2.3",
     "prop-types": "^15.8.1",
     "query-string": "^9.0.0",
@@ -45,6 +45,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
+    "react-lazy-load-image-component": "^1.6.2",
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.23.1",
