--- a/FE/package.json
+++ b/FE/package.json
@@ -30,6 +30,7 @@
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.3",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.11",
@@ -42,6 +43,7 @@
     "query-string": "^9.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
@@ -51,6 +53,7 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
+    "recharts": "^2.12.7",
     "redux-mock-store": "^1.5.4",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
