--- a/FE/package.json
+++ b/FE/package.json
@@ -18,28 +18,28 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@headlessui/react": "^2.0.4",
+    "@headlessui/react": "^2.1.1",
     "@heroicons/react": "^2.1.3",
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
     "@nextui-org/react": "^2.4.0",
     "@react-icons/all-files": "^4.1.0",
+    "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.5",
     "@svgr/webpack": "^8.1.0",
     "@testing-library/user-event": "^14.5.2",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
-    "chart.js": "^4.4.3",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.11",
     "eslint-plugin-jest": "^28.6.0",
     "framer-motion": "^11.2.6",
     "jwt-decode": "^4.0.0",
-    "moment": "^2.30.1",
     "next": "^14.2.3",
     "prop-types": "^15.8.1",
+    "qrcode": "^1.5.3",
     "query-string": "^9.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
@@ -48,11 +48,14 @@
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "react-lazy-load-image-component": "^1.6.2",
+    "react-qr-reader": "^3.0.0-beta-1",
+    "react-qr-scanner": "^1.0.0-alpha.11",
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
+    "react-tooltip": "^5.27.1",
     "recharts": "^2.12.7",
     "redux-mock-store": "^1.5.4",
     "redux-persist": "^6.0.0",
@@ -71,6 +74,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc-38e3b23483-20240529",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "gh-pages": "^6.1.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^24.1.0",
