--- a/BE/FPetSpa/appsettings.json
+++ b/BE/FPetSpa/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
     //"FPetDBContext": "Data Source=PhiHung\\MYSQL2022;Initial Catalog=BigUpdate;Persist Security Info=True;User ID=sa;Password=12345;Trust Server Certificate=True"
+    // "FPetDBContext": "Data Source=MSI\\MYSQL2014;Initial Catalog=Fpetspa;Persist Security Info=True;User ID=sa;Password=12345;Trust Server Certificate=True"
     "FPetDBContext": "Server=tcp:fpetspadatabase.database.windows.net,1433;Initial Catalog=FpetSpa;Persist Security Info=False;User ID=hungnpse172907;Password=Hunghau589@;MultipleActiveResultSets=False;Encrypt=False;TrustServerCertificate=True;Connection Timeout=30;"
   },
   "Logging": {
@@ -44,7 +45,8 @@
     "Command": "pay",
     "CurrCode": "VND",
     "Locale": "vn",
-    "PaymentBackReturnUrl": "https://fpetspa.azurewebsites.net/api/Order/ResponeCheckOut"
+    "PaymentBackReturnUrl": "https://localhost:7055/api/Order/ResponeCheckOut",
+    "BalanceApiUrl": "https://sandbox.vnpayment.vn/apis/v2/merchant/v2/balance/query"
   },
 
   "AllowedHosts": "*",
