--- a/FE/package.json
+++ b/FE/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-jest": "^28.6.0",
     "framer-motion": "^11.2.6",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "next": "^14.2.3",
     "prop-types": "^15.8.1",
     "qrcode": "^1.5.3",
@@ -61,6 +62,8 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
     "resolve-url-loader": "^5.0.0",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.5",
     "swiper": "^11.1.4",
     "yarn": "^1.22.22"
   },
