--- a/FE/package.json
+++ b/FE/package.json
@@ -23,6 +23,7 @@
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
     "@nextui-org/react": "^2.4.0",
+    "@paypal/react-paypal-js": "^8.5.0",
     "@react-icons/all-files": "^4.1.0",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.5",
