--- a/FE/package.json
+++ b/FE/package.json
@@ -22,10 +22,8 @@
     "@heroicons/react": "^2.1.3",
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
-    "@mui/x-date-pickers": "^7.10.0",
-    "@mui/x-date-pickers-pro": "^7.10.0",
     "@nextui-org/react": "^2.4.0",
-    "@react-google-maps/api": "^2.19.3",
+    "@paypal/react-paypal-js": "^8.5.0",
     "@react-icons/all-files": "^4.1.0",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.5",
@@ -40,7 +38,7 @@
     "eslint-plugin-jest": "^28.6.0",
     "framer-motion": "^11.2.6",
     "jwt-decode": "^4.0.0",
-    "leaflet": "^1.9.4",
+    "lodash": "^4.17.21",
     "next": "^14.2.3",
     "prop-types": "^15.8.1",
     "qrcode": "^1.5.3",
@@ -48,12 +46,10 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-chartjs-2": "^5.2.0",
-    "react-datepicker": "^7.3.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "react-lazy-load-image-component": "^1.6.2",
-    "react-leaflet": "^4.2.1",
     "react-qr-reader": "^3.0.0-beta-1",
     "react-qr-scanner": "^1.0.0-alpha.11",
     "react-quill": "^2.0.0",
@@ -87,7 +83,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^24.1.0",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.4",
+    "tailwindcss": "^3.4.3",
     "vite": "^5.2.0"
   },
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
