--- a/FE/package.json
+++ b/FE/package.json
@@ -47,6 +47,7 @@
     "react-bootstrap": "^2.10.2",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "react-lazy-load-image-component": "^1.6.2",
