--- a/FE/package.json
+++ b/FE/package.json
@@ -19,7 +19,8 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@headlessui/react": "^2.1.1",
-    "@heroicons/react": "^2.1.3",
+    "@heroicons/react": "^2.1.5",
+    "@material-tailwind/react": "^2.1.9",
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
     "@nextui-org/react": "^2.4.0",
@@ -32,6 +33,7 @@
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "config": "^3.3.12",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.11",
@@ -44,6 +46,7 @@
     "qrcode": "^1.5.3",
     "query-string": "^9.0.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.10.2",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
