--- a/FE/package.json
+++ b/FE/package.json
@@ -19,8 +19,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@headlessui/react": "^2.1.1",
-    "@heroicons/react": "^2.1.5",
-    "@material-tailwind/react": "^2.1.9",
+    "@heroicons/react": "^2.1.3",
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
     "@nextui-org/react": "^2.4.0",
@@ -33,7 +32,6 @@
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
-    "config": "^3.3.12",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.11",
@@ -46,7 +44,6 @@
     "qrcode": "^1.5.3",
     "query-string": "^9.0.0",
     "react": "^18.2.0",
-    "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.10.2",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
@@ -54,6 +51,7 @@
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "react-lazy-load-image-component": "^1.6.2",
+    "react-modal": "^3.16.1",
     "react-qr-reader": "^3.0.0-beta-1",
     "react-qr-scanner": "^1.0.0-alpha.11",
     "react-quill": "^2.0.0",
@@ -70,7 +68,6 @@
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.5",
     "swiper": "^11.1.4",
-    "tw-elements-react": "^1.0.0-alpha-end",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
