--- a/BE/FPetSpa/appsettings.json
+++ b/BE/FPetSpa/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    //"FPetDBContext": "Data Source=PhiHung\\MYSQL2022;Initial Catalog=AfterFpetSpaUpdate;Persist Security Info=True;User ID=sa;Password=12345;Trust Server Certificate=True"
-    "FPetDBContext": "Data Source=.;Initial Catalog=DB_varchar_Update;Persist Security Info=True;User ID=sa;Password=12345;Trust Server Certificate=True"
+    // "FPetDBContext": "Data Source=PhiHung\\MYSQL2022;Initial Catalog=Check;Persist Security Info=True;User ID=sa;Password=12345;Trust Server Certificate=True"
+    "FPetDBContext": "Data Source=.;Initial Catalog=AfterFpetSpaUpdate;Persist Security Info=True;User ID=sa;Password=12345;Trust Server Certificate=True"
     //"FPetDBContext": "Server=tcp:fpetspadatabase.database.windows.net,1433;Initial Catalog=FpetSpa;Persist Security Info=False;User ID=hungnpse172907;Password=Hunghau589@;MultipleActiveResultSets=False;Encrypt=False;TrustServerCertificate=True;Connection Timeout=30;"
   },
   "Logging": {
